--- a/config.yaml
+++ b/config.yaml
@@ -1,120 +1,40 @@
+timezone: "America/Chicago"
+send_time_local: "08:00"
+
+archive:
+  enabled: true
+  site_dir: "docs"
+
+weather:
+  zips: ["35209", "35541", "59758"]
+  forecast_days: 7
+  include_alerts: true
+
+email:
+  to:
+    - "msh.hill@outlook.com"
+  subject_prefix: "Daily Digest"
+
+calendar:
+  provider: "google"
+  days_ahead: 21
+
+inbox_summary:
+  provider: "gmail"
+  max_messages: 200
+  detect_questions:
+    extra_phrases: []
+
 news:
   lookback_hours: 24
-
-  # Helps avoid rate limiting by spacing calls (recommended)
   throttle_seconds_between_sections: 1.5
 
   defaults:
     count: 10
-    # Keep results in English + US-centric where relevant.
     global_and: "lang:english"
-
-    # Optional: exclude noisy domains if you want
     exclude_domains: []
 
   watchlists:
-    competitors:
-      - "Equifax"
-      - "TransUnion"
-      - "FICO"
-      - "LexisNexis"
-      - "Moody's Analytics"
-      - "S&P Global"
-      - "Plaid"
-      - "Stripe"
-      - "Jumio"
-      - "Onfido"
-      - "Socure"
-      - "Trulioo"
-
-    topics_finserv_ai:
-      - "generative AI"
-      - "large language model"
-      - "AI underwriting"
-      - "AI credit decisioning"
-      - "fraud detection"
-      - "identity verification"
-      - "AML"
-      - "KYC"
-      - "open banking"
-      - "financial crime"
-      - "risk management"
-
-    topics_products:
-      - "product launch"
-      - "new product"
-      - "partnership"
-      - "acquisition"
-      - "integration"
-
-  sections:
-    - name: "Birmingham (Local)"
-      type: gdelt_template
-      count: 10
-      template:
-        and:
-          - '(Birmingham OR "Jefferson County" OR "Hoover AL" OR "Homewood AL" OR "Mountain Brook")'
-          - "(Alabama OR AL)"
-
-    - name: "US (Top)"
-      type: gdelt_template
-      count: 10
-      template:
-        and:
-          - "sourceCountry:US"
-
-    - name: "World (Top)"
-      type: gdelt_template
-      count: 10
-      template:
-        and:
-          - "(world OR global OR international OR geopolitics OR diplomacy)"
-
-    - name: "Markets & Economic"
-      type: gdelt_template
-      count: 10
-      template:
-        and:
-          - "(inflation OR CPI OR PCE OR Fed OR FOMC OR treasury yields OR jobs report OR earnings OR recession OR GDP OR rates OR markets OR stocks OR bonds)"
-
-    - name: "Experian Updates (Products/Platform)"
-      type: gdelt_template
-      count: 10
-      template:
-        and:
-          - "(Experian AND (product OR platform OR launch OR partnership OR acquisition OR integration OR earnings))"
-
-    - name: "Competitors / New Products"
-      type: gdelt_template
-      count: 10
-      template:
-        and:
-          - "{{watchlist:competitors}}"
-          - "(product launch OR new product OR partnership OR acquisition OR integration OR earnings)"
-
-    - name: "AI in Financial Services (Trends)"
-      type: gdelt_template
-      count: 10
-      template:
-        and:
-          - "{{watchlist:topics_finserv_ai}}"
-          - "(bank OR lender OR underwriting OR credit decisioning OR risk OR fraud OR identity OR compliance)"
-
-
-  # Global controls for news (optional)
-  defaults:
-    count: 10
-    # If set, appended to every query
-    global_and: 'lang:english'
-    # If set, appended as a negated block (best effort)
-    exclude_domains: []
-      # - "example.com"
-    # Optional: boost recency by using more hours for "fast" sections
-    # (you can override per section)
-    # lookback_hours: 24
-
-  watchlists:
-    # Competitors / adjacent vendors (edit freely)
     competitors:
       - Experian
       - Equifax
@@ -125,7 +45,6 @@ news:
       - Innovis
       - "Credit Karma"
 
-    # Phrases that indicate launches / deals / product activity
     product_signals:
       - launch
       - launches
@@ -140,7 +59,6 @@ news:
       - integrates
       - integration
 
-    # AI terms
     ai_terms:
       - "generative AI"
       - GenAI
@@ -149,7 +67,6 @@ news:
       - "large language model"
       - "machine learning"
 
-    # Financial services context terms
     finserv_context:
       - banking
       - lender
@@ -162,7 +79,6 @@ news:
       - AML
       - KYC
 
-    # Fraud / identity threat terms
     fraud_identity_terms:
       - fraud
       - "synthetic identity"
@@ -180,7 +96,7 @@ news:
       count: 10
       template:
         and:
-          - '("Birmingham" OR "Jefferson County")'
+          - '("Birmingham" OR "Jefferson County" OR "Hoover AL" OR "Homewood AL" OR "Mountain Brook")'
           - "(Alabama OR AL)"
 
     - name: "US (Top)"
@@ -194,7 +110,8 @@ news:
       type: "gdelt_template"
       count: 10
       template:
-        # Rely on defaults.global_and = lang:english
+        and:
+          - "(world OR global OR international OR geopolitics OR diplomacy)"
 
     - name: "Markets & Economic"
       type: "gdelt_template"
@@ -243,17 +160,3 @@ news:
         and:
           - "{{watchlist:fraud_identity_terms}}"
           - "{{watchlist:ai_terms}}"
-archive:
-  enabled: true
-  site_dir: "docs"
-
-  weather:
-  zips: ["35209", "35541", "59758"]
-  forecast_days: 7
-  include_alerts: true
-
-email:
-  to:
-    - msh.hill@outlook.com
-  subject_prefix: "Daily Digest"
-
